QQmlInfo: print ancestor of object if it has no QML engine
This results in the following message for objects without a QML engine:

QML AttachedObject (parent or ancestor of Attached): Binding loop
detected for property "a"

for this QML file, named AttachedObject.qml:

import QtQuick 2.0
import org.qtproject.Test 1.0

Item {
    Attached.a: Attached.a
}

This, in turn, allows the warning to be emitted via the
QQmlEngine::warnings signal, since QQmlEnginePrivate::warning() is now
passed a valid engine. This solves the awkward situation where a
binding loop warning can not be detected at all by auto tests involving
attached C++ objects (as message handlers do not receive these messages
either).

Pick-to: 5.15
Change-Id: I07589974207bd5448d22a6086a52b9230d23e298
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>

--- a/tests/auto/qml/qqmlinfo/CMakeLists.txt
+++ b/tests/auto/qml/qqmlinfo/CMakeLists.txt
@@ -13,6 +13,7 @@ list(APPEND test_data ${test_data_glob})
 qt_add_test(tst_qqmlinfo
     SOURCES
         ../../shared/util.cpp ../../shared/util.h
+        attached.cpp attached.h
         tst_qqmlinfo.cpp
     INCLUDE_DIRECTORIES
         ../../shared
@@ -23,6 +24,10 @@ qt_add_test(tst_qqmlinfo
         Qt::QmlPrivate
     TESTDATA ${test_data}
 )
+
+#### Keys ignored in scope 1:.:.:qqmlinfo.pro:<TRUE>:
+# QML_IMPORT_MAJOR_VERSION = "1"
+# QML_IMPORT_NAME = "org.qtproject.Test"
 
 ## Scopes:
 #####################################################################
@@ -36,3 +41,10 @@ qt_extend_target(tst_qqmlinfo CONDITION NOT ANDROID AND NOT IOS
     DEFINES
         QT_QMLTEST_DATADIR=\\\"${CMAKE_CURRENT_SOURCE_DIR}/data\\\"
 )
+
+set_target_properties(tst_qqmlinfo PROPERTIES
+    QT_QML_MODULE_VERSION 1.0
+    QT_QML_MODULE_URI org.qtproject.Test
+)
+
+qt6_qml_type_registration(tst_qqmlinfo)
