--- a/src/imports/CMakeLists.txt
+++ b/src/imports/CMakeLists.txt
@@ -3,7 +3,14 @@
 add_subdirectory(controls)
 add_subdirectory(platform)
 add_subdirectory(templates)
+add_subdirectory(nativestyle)
 add_subdirectory(controls/fusion)
 add_subdirectory(controls/imagine)
 add_subdirectory(controls/material)
 add_subdirectory(controls/universal)
+if(MACOS)
+    add_subdirectory(controls/macos)
+endif()
+if(WIN32)
+    add_subdirectory(controls/windows)
+endif()
