CMake: Prepare for removal of Threads::Threads special cases
The Threads::Threads target will automatically be propagated via the
Qt6::Platform target.

Task-number: QTBUG-85877
Change-Id: I33aec0b393be82467970eefd69f31feda3ac996e
Reviewed-by: Cristian Adam <cristian.adam@qt.io>

--- a/tests/auto/qml/qjsengine/CMakeLists.txt
+++ b/tests/auto/qml/qjsengine/CMakeLists.txt
@@ -10,7 +10,12 @@ file(GLOB_RECURSE test_data_glob
     script/*)
 list(APPEND test_data ${test_data_glob})
 
-qt_find_package(Threads PROVIDED_TARGETS Threads::Threads) # special case
+# special case begin
+# TODO: Prepare for removal, once Platform brings in Threads.
+if(NOT TARGET Threads::Threads)
+    qt_find_package(Threads PROVIDED_TARGETS Threads::Threads)
+endif()
+# special case end
 
 qt_add_test(tst_qjsengine
     SOURCES
