--- a/tests/auto/qml/qjsvalue/CMakeLists.txt
+++ b/tests/auto/qml/qjsvalue/CMakeLists.txt
@@ -4,7 +4,12 @@
 ## tst_qjsvalue Test:
 #####################################################################
 
-qt_find_package(Threads PROVIDED_TARGETS Threads::Threads) # special case
+# special case begin
+# TODO: Prepare for removal, once Platform brings in Threads.
+if(NOT TARGET Threads::Threads)
+    qt_find_package(Threads PROVIDED_TARGETS Threads::Threads)
+endif()
+# special case end
 
 qt_add_test(tst_qjsvalue
     SOURCES
