Fix CMake build
Task-number: QTBUG-82922
Change-Id: I75f4a553a6bb260f77bfa791f12fa42e80131e09
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,4 +2,5 @@
 
 add_subdirectory(quicktemplates2)
 add_subdirectory(quickcontrols2)
+add_subdirectory(quickcontrols2impl)
 add_subdirectory(imports)
