--- a/src/imports/controls/material/CMakeLists.txt
+++ b/src/imports/controls/material/CMakeLists.txt
@@ -7,15 +7,12 @@
 qt_add_qml_module(qtquickcontrols2materialstyleplugin
     TARGET_PATH "QtQuick/Controls/Material"
     URI "QtQuick.Controls.Material"
-    VERSION "2.${CMAKE_PROJECT_VERSION_MINOR}"
+    VERSION "6.0" # special case
     CLASSNAME QtQuickControls2MaterialStylePlugin
-    DEPENDENCIES
-        QtQuick.Controls/2.5
-    SKIP_TYPE_REGISTRATION
+    IMPORTS
+        QtQuick.Controls.Default/auto
+    GENERATE_QMLTYPES
     SOURCES
-        qquickmaterialbusyindicator.cpp qquickmaterialbusyindicator_p.h
-        qquickmaterialprogressbar.cpp qquickmaterialprogressbar_p.h
-        qquickmaterialripple.cpp qquickmaterialripple_p.h
         qquickmaterialstyle.cpp qquickmaterialstyle_p.h
         qquickmaterialtheme.cpp qquickmaterialtheme_p.h
         qtquickcontrols2materialstyleplugin.cpp
@@ -26,6 +23,7 @@ qt_add_qml_module(qtquickcontrols2materialstyleplugin
         Qt::CorePrivate
         Qt::GuiPrivate
         Qt::QmlPrivate
+        Qt::QuickControls2ImplPrivate
         Qt::QuickControls2Private
         Qt::QuickPrivate
         Qt::QuickTemplates2Private
@@ -65,28 +63,24 @@ qt_add_resource(qtquickcontrols2materialstyleplugin "qtquickcontrols2materialsty
 
 
 #### Keys ignored in scope 1:.:.:material.pro:<TRUE>:
-# IMPORT_NAME = "QtQuick.Controls.Material"
-# IMPORT_VERSION = "2.$$QT_MINOR_VERSION"
 # OTHER_FILES = "qmldir" "$$QML_FILES"
+# QML_IMPORT_NAME = "QtQuick.Controls.Material"
+# QML_IMPORT_VERSION = "$$QT_VERSION"
 # TARGETPATH = "QtQuick/Controls/Material"
 # _REQUIREMENTS = "qtConfig(quickcontrols2-material)"
 
 set(qml_files
     "ApplicationWindow.qml"
-    "BoxShadow.qml"
     "BusyIndicator.qml"
     "Button.qml"
     "CheckBox.qml"
     "CheckDelegate.qml"
-    "CheckIndicator.qml"
     "ComboBox.qml"
-    "CursorDelegate.qml"
     "DelayButton.qml"
     "Dial.qml"
     "Dialog.qml"
     "DialogButtonBox.qml"
     "Drawer.qml"
-    "ElevationEffect.qml"
     "Frame.qml"
     "GroupBox.qml"
     "HorizontalHeaderView.qml"
@@ -104,14 +98,11 @@ set(qml_files
     "ProgressBar.qml"
     "RadioButton.qml"
     "RadioDelegate.qml"
-    "RadioIndicator.qml"
     "RangeSlider.qml"
     "RoundButton.qml"
-    "RectangularGlow.qml"
     "ScrollBar.qml"
     "ScrollIndicator.qml"
     "Slider.qml"
-    "SliderHandle.qml"
     "SpinBox.qml"
     "SplitView.qml"
     "StackView.qml"
@@ -119,7 +110,6 @@ set(qml_files
     "SwipeView.qml"
     "Switch.qml"
     "SwitchDelegate.qml"
-    "SwitchIndicator.qml"
     "TabBar.qml"
     "TabButton.qml"
     "TextArea.qml"
@@ -132,178 +122,154 @@ set(qml_files
     "VerticalHeaderView.qml"
 )
 set_source_files_properties(ApplicationWindow.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
-)
-set_source_files_properties(BoxShadow.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(BusyIndicator.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(Button.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(CheckBox.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(CheckDelegate.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
-)
-set_source_files_properties(CheckIndicator.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(ComboBox.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
-)
-set_source_files_properties(CursorDelegate.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(DelayButton.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.2;6.0"
 )
 set_source_files_properties(Dial.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(Dialog.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.1;6.0"
 )
 set_source_files_properties(DialogButtonBox.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.1;6.0"
 )
 set_source_files_properties(Drawer.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
-)
-set_source_files_properties(ElevationEffect.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(Frame.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(GroupBox.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(HorizontalHeaderView.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.15;6.0"
 )
 set_source_files_properties(ItemDelegate.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(Label.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(Menu.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(MenuBar.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.3;6.0"
 )
 set_source_files_properties(MenuBarItem.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.3;6.0"
 )
 set_source_files_properties(MenuItem.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(MenuSeparator.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.1;6.0"
 )
 set_source_files_properties(Page.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(PageIndicator.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(Pane.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(Popup.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(ProgressBar.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(RadioButton.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(RadioDelegate.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
-)
-set_source_files_properties(RadioIndicator.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(RangeSlider.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(RoundButton.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
-)
-set_source_files_properties(RectangularGlow.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.1;6.0"
 )
 set_source_files_properties(ScrollBar.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(ScrollIndicator.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(Slider.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
-)
-set_source_files_properties(SliderHandle.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(SpinBox.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(SplitView.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.13;6.0"
 )
 set_source_files_properties(StackView.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(SwipeDelegate.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(SwipeView.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(Switch.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(SwitchDelegate.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
-)
-set_source_files_properties(SwitchIndicator.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(TabBar.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(TabButton.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(TextArea.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(TextField.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(ToolBar.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(ToolButton.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(ToolSeparator.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.1;6.0"
 )
 set_source_files_properties(ToolTip.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(Tumbler.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(VerticalHeaderView.qml PROPERTIES
-    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+    QT_QML_SOURCE_VERSION "2.15;6.0"
 )
 
 qt6_target_qml_files(qtquickcontrols2materialstyleplugin
