--- a/tests/auto/CMakeLists.txt
+++ b/tests/auto/CMakeLists.txt
@@ -24,10 +24,10 @@ add_subdirectory(qquickmenubar)
 add_subdirectory(qquickninepatchimage)
 add_subdirectory(qquickpopup)
 add_subdirectory(qquickstyle)
-add_subdirectory(qquickstyleselector)
 add_subdirectory(qquickuniversalstyle)
 add_subdirectory(qquickuniversalstyleconf)
 add_subdirectory(revisions)
 add_subdirectory(sanity)
 add_subdirectory(snippets)
+add_subdirectory(styleimports)
 add_subdirectory(translation)
