--- a/tests/benchmarks/objectcount/CMakeLists.txt
+++ b/tests/benchmarks/objectcount/CMakeLists.txt
@@ -19,6 +19,7 @@ qt_add_test(tst_objectcount
         Qt::QmlPrivate
         Qt::Quick
         Qt::QuickControls2
+        Qt::QuickControls2Private
         Qt::QuickPrivate
         Qt::QuickTemplates2Private
         Qt::TestPrivate
