--- a/tests/auto/accessibility/CMakeLists.txt
+++ b/tests/auto/accessibility/CMakeLists.txt
@@ -28,6 +28,7 @@ qt_add_test(tst_accessibility
         Qt::GuiPrivate
         Qt::QmlPrivate
         Qt::QuickControls2
+        Qt::QuickControls2Private
         Qt::QuickPrivate
         Qt::QuickTemplates2Private
         Qt::TestPrivate
