Native style: add configure options
Change-Id: I54521f85aa821369ba3ff57fb037ae4996845c97
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>

--- a/src/imports/controls/macos/CMakeLists.txt
+++ b/src/imports/controls/macos/CMakeLists.txt
@@ -39,6 +39,7 @@ qt_add_qml_module(qtquickcontrols2macosstyleplugin
 # QML_IMPORT_MAJOR_VERSION = "2"
 # QML_IMPORT_NAME = "QtQuick.Controls.macOS"
 # TARGETPATH = "QtQuick/Controls.2/macOS"
+# _REQUIREMENTS = "qtConfig(quickcontrols2-macos)"
 
 set(qml_files
     "Button.qml"
