--- a/src/quickcontrols2/configure.json
+++ b/src/quickcontrols2/configure.json
@@ -6,7 +6,9 @@
             "style-fusion": { "type": "boolean", "name": "quickcontrols2-fusion" },
             "style-imagine": { "type": "boolean", "name": "quickcontrols2-imagine" },
             "style-material": { "type": "boolean", "name": "quickcontrols2-material" },
-            "style-universal": { "type": "boolean", "name": "quickcontrols2-universal" }
+            "style-universal": { "type": "boolean", "name": "quickcontrols2-universal" },
+            "style-macos": { "type": "boolean", "name": "quickcontrols2-macos" },
+            "style-windows": { "type": "boolean", "name": "quickcontrols2-windows" }
         }
     },
 
@@ -42,6 +44,20 @@
             "section": "Quick Controls 2",
             "condition": "features.quickcontrols2-default",
             "output": [ "privateFeature" ]
+        },
+        "quickcontrols2-macos": {
+            "label": "macOS",
+            "purpose": "Provides a native macOS desktop style.",
+            "section": "Quick Controls 2",
+            "condition": "features.quickcontrols2-default",
+            "output": [ "privateFeature" ]
+        },
+        "quickcontrols2-windows": {
+            "label": "Windows",
+            "purpose": "Provides a native Windows desktop style.",
+            "section": "Quick Controls 2",
+            "condition": "features.quickcontrols2-default",
+            "output": [ "privateFeature" ]
         }
     },
 
@@ -52,7 +68,7 @@
                 {
                     "message": "Styles",
                     "type": "featureList",
-                    "args": "quickcontrols2-default quickcontrols2-fusion quickcontrols2-imagine quickcontrols2-material quickcontrols2-universal"
+                    "args": "quickcontrols2-default quickcontrols2-fusion quickcontrols2-imagine quickcontrols2-material quickcontrols2-universal quickcontrols2-macos quickcontrols2-windows"
                 }
             ]
         }
