Fix fallback styles overwriting themes
In Qt 5, QtQuickControls2Plugin::registerTypes() was responsible for
calling initializeTheme() on each style plugin. Now that we delegate
more work to the QML engine, each style plugin calls initializeTheme()
via registerTypes().

To avoid fallback styles overwriting font and palette data set by the
current style, we need to check if the theme has been intialized before
calling initializeTheme(). To do this, we add a static
"themeInitialized" bool that QQuickStylePlugin sets to true after
calling intializeTheme() for the first time. It checks this value and
avoids calling intializeTheme() if it's true.

We also need to make QQuickStylePlugin ensure that the theme it's
initializing belongs to the current style.

Fixes: QTBUG-86303
Change-Id: Ie65e646677c78622829f4949c41cb79204cf5786
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>

--- a/tests/auto/styleimports/CMakeLists.txt
+++ b/tests/auto/styleimports/CMakeLists.txt
@@ -24,6 +24,7 @@ qt_add_test(tst_styleimports
         Qt::GuiPrivate
         Qt::QmlPrivate
         Qt::QuickControls2
+        Qt::QuickControls2ImplPrivate
         Qt::QuickControls2Private
         Qt::QuickPrivate
         Qt::QuickTemplates2Private
@@ -33,13 +34,19 @@ qt_add_test(tst_styleimports
 
 # Resources:
 set(qmake_resourcestyle_resource_files
-    "ResourceStyle/Button.qml"
-    "ResourceStyle/qmldir"
+    "resources/ResourceStyle/Button.qml"
+    "resources/ResourceStyle/qmldir"
+)
+set(qmake_resourcestyle_resource_files
+    "ResourceStyle/Button.qml" # special case: QTBUG-86726
+    "ResourceStyle/qmldir" # special case
 )
 
 qt_add_resource(tst_styleimports "qmake_resourcestyle"
     PREFIX
         "/"
+    BASE
+        "resources"
     FILES
         ${qmake_resourcestyle_resource_files}
 )
