Remove old GLSL code from fboitem example
There is no OpenGL path anymore in Qt 6, no point using file selectors.

Change-Id: I4b7afbbb193dfe1a6e912a909babab0aeb8dcdda
Reviewed-by: Andy Nichols <andy.nichols@qt.io>

--- a/examples/quick/scenegraph/fboitem/CMakeLists.txt
+++ b/examples/quick/scenegraph/fboitem/CMakeLists.txt
@@ -40,8 +40,7 @@ target_link_libraries(fboitem PUBLIC
 # Resources:
 set(fboitem_resource_files
     "main.qml"
-    "shaders/+qsb/checker.frag"
-    "shaders/checker.frag"
+    "shaders/checker.frag.qsb"
 )
 
 qt6_add_resources(fboitem "fboitem"
