Add CMake project file for custommaterial example
The name conflicts with a Quick3D example so try to use the same
approach as it was done for customgeometry.

Task-number: QTBUG-86205
Change-Id: Ie01cd6c0118d512b2f45d4c6e782ec6639e052c6
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/examples/quick/scenegraph/CMakeLists.txt
+++ b/examples/quick/scenegraph/CMakeLists.txt
@@ -1,12 +1,13 @@
 # Generated from scenegraph.pro.
 
 add_subdirectory(customgeometry)
+add_subdirectory(custommaterial)
+add_subdirectory(graph)
 add_subdirectory(threadedanimation)
+add_subdirectory(twotextureproviders)
 if(QT_FEATURE_opengl OR QT_FEATURE_opengles2 OR QT_FEATURE_opengles3)
-    add_subdirectory(graph)
     add_subdirectory(fboitem)
     add_subdirectory(openglunderqml)
-    add_subdirectory(twotextureproviders)
 endif()
 if(IOS OR MACOS)
     add_subdirectory(metalunderqml)
