Default to the most appropriate built-in style if none is specified
[ChangeLog][Styles] An appropriate built-in style is now used as the
default style if one is available for the target platform. For example,
when running a Qt Quick Controls application on macOS, the macOS style
will be used. On Android, the Material style will be used. When running
on e.g. an embedded device, where no native style is available, use the
Basic (formerly "Default") style.

Change-Id: Ie61d1a8a1a83fbeba63387c7ca3671084f47bc04
Fixes: QTBUG-86403
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>

--- a/tests/auto/controls/basic/CMakeLists.txt
+++ b/tests/auto/controls/basic/CMakeLists.txt
@@ -19,6 +19,7 @@ qt_add_test(tst_basic
         TST_CONTROLS_DATA=\\\"${CMAKE_CURRENT_SOURCE_DIR}/../../../../tests/auto/controls/data\\\"
     PUBLIC_LIBRARIES
         Qt::Gui
+        Qt::QuickControls2
     TESTDATA ${test_data}
 )
 
