shadereffect example: remove unused legacy shader code
No point in exercising the file selector magic when there is only one
possible path in Qt 6.

Change-Id: I3b49b19d57a89855063e983ab0add13335840fb9
Reviewed-by: Andy Nichols <andy.nichols@qt.io>

--- a/examples/quick/shadereffects/CMakeLists.txt
+++ b/examples/quick/shadereffects/CMakeLists.txt
@@ -36,18 +36,12 @@ set(shadereffects_resource_files
     "content/Slider.qml"
     "content/face-smile.png"
     "content/qt-logo.png"
-    "content/shaders/+qsb/blur.frag"
-    "content/shaders/+qsb/colorize.frag"
-    "content/shaders/+qsb/genie.vert"
-    "content/shaders/+qsb/outline.frag"
-    "content/shaders/+qsb/shadow.frag"
-    "content/shaders/+qsb/wobble.frag"
-    "content/shaders/blur.frag"
-    "content/shaders/colorize.frag"
-    "content/shaders/genie.vert"
-    "content/shaders/outline.frag"
-    "content/shaders/shadow.frag"
-    "content/shaders/wobble.frag"
+    "content/shaders/blur.frag.qsb"
+    "content/shaders/colorize.frag.qsb"
+    "content/shaders/genie.vert.qsb"
+    "content/shaders/outline.frag.qsb"
+    "content/shaders/shadow.frag.qsb"
+    "content/shaders/wobble.frag.qsb"
     "shadereffects.qml"
 )
 
