CMake: Install public qmake .prf files into the prefix mkspecs dir
These are needed for qmake projects.

Fixes: QTBUG-86802
Task-number: QTBUG-86498
Change-Id: I09c05a358fa580a3a9eab002c6ada42ad70e999c
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>

--- a/src/qmltyperegistrar/CMakeLists.txt
+++ b/src/qmltyperegistrar/CMakeLists.txt
@@ -39,3 +39,12 @@ qt_add_tool(${target_name}
 
 #### Keys ignored in scope 3:.:.:qmltyperegistrar.pro:else:
 # COPIES = "build_integration"
+
+# special case begin
+# Install public prf files.
+set(qmltyperegistrar_mkspecs "${CMAKE_CURRENT_SOURCE_DIR}/qmltypes.prf")
+set(mkspecs_install_dir "${INSTALL_MKSPECSDIR}")
+qt_path_join(mkspecs_install_dir "${QT_INSTALL_DIR}" "${mkspecs_install_dir}" "features")
+qt_copy_or_install(FILES "${qmltyperegistrar_mkspecs}"
+                   DESTINATION ${mkspecs_install_dir})
+# special case end
