CMake: Disable usage of CMake API compatibility wrappers
Setting the QT_NO_INTERNAL_COMPATIBILITY_FUNCTIONS variable
in the project ensures we ported away from old API calls.

Task-number: QTBUG-86815
Change-Id: I3d80bf0ffcfe765472b2cd01ffc43d3af04d0261
Reviewed-by: Cristian Adam <cristian.adam@qt.io>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,11 @@ project(QtDeclarative # special case
     LANGUAGES CXX C
 )
 
+# special case begin
+# Make sure we only use latest private CMake API, aka no compatibility wrappers.
+set(QT_NO_INTERNAL_COMPATIBILITY_FUNCTIONS TRUE)
+# special case end
+
 find_package(Qt6 ${PROJECT_VERSION} CONFIG REQUIRED COMPONENTS BuildInternals Core Gui Widgets Network # special case
                                            OPTIONAL_COMPONENTS OpenGL OpenGLWidgets Sql Concurrent Test) # special case
 
