CMake: Regenerate projects before API change
Task-number: QTBUG-86815
Change-Id: Ie0688d13b1787da3c1fc241a7d864aa014ca1d70
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>

--- a/tests/auto/CMakeLists.txt
+++ b/tests/auto/CMakeLists.txt
@@ -30,4 +30,6 @@ add_subdirectory(revisions)
 add_subdirectory(sanity)
 add_subdirectory(snippets)
 add_subdirectory(styleimports)
+add_subdirectory(styleimportscompiletimematerial)
+add_subdirectory(styleimportscompiletimeqmlonly)
 add_subdirectory(translation)
